Bugfix: last search result row offset on Firefox

--- a/style.css
+++ b/style.css
@@ -303,7 +303,7 @@ div#posts div#posts-container {
     article.post-preview {                                      /* Space out the thumbnails a bit more */
         flex: 1 1 auto;
         margin: 10px;
-        max-width: fit-content;
+        max-width: max-content;
     }
     article.post-preview div.desc {
         width: inherit;
